src/webparts/storyBrowser/components/StoryBrowser.module.scss
@import '~office-ui-fabric-react/dist/sass/References.scss';

.storyBrowser input{
  font-family:Segoe UI, Arial, sans-serif;
  border:0px;
  font-size:17px;
}
.storyBrowser input::placeholder{
  color:#333;
  font-size:17px;
}
.welcome {
  text-align: center;
}
.welcomeImage {
  width: 100%;
  max-width: 420px;
}
.filters{
  font-size:17px;
}
.filters li{
  font-size:17px;
}
.links {
  a {
    text-decoration: none;
    color: "[theme:link, default:#03787c]";
    color: var(--link); // note: CSS Custom Properties support is limited to modern browsers only
    &:hover {
      text-decoration: underline;
      color: "[theme:linkHovered, default: #014446]";
      color: var(--linkHovered); // note: CSS Custom Properties support is limited to modern browsers only
    }
  }
}
#storyBrowser{
  display:flex;
}
textarea:focus, input:focus{
outline: none;
}
body{
  font-family:Segoe UI, Arial, sans-serif;
  
}
#filters{
  width:1080px;
  margin:auto;
  display:flex;
  flex-wrap:wrap;
  flex-direction:row;
  margin-top:30px;
  margin-bottom:30px;
}
.filtersContainer{


  display:flex;
  flex-wrap:wrap;
  flex-direction:row;
  margin-top:30px;
  margin-bottom:30px;
  max-width:100%;
  margin-left:20px;
}
.filtersContainer ul{
  list-style: none;
  padding-left: 0;
  margin-bottom:20px;
}
#filters > .filters{
  border-bottom: 2px solid #0078D7;
  margin-right:20px;
  padding:10px 20px;
  max-width:100%;
}
.filtersSearch i{
  margin-left:-30px!important;
}
.partnerSearch::placeholder{
  color:#333!important;

}
.filterSearch input{
  font-family:Segoe UI, Arial, sans-serif;
  border:0px;
  font-size:17px;
  color:#333;
  width:230px;
  &::placeholder{
    color:#333;
    font-size:17px;
  }
}
#filters input:focus{
  background:none;
}
.activate{
  background-repeat: no-repeat;
  background-position: 100%;
  margin-right: 20px;
  padding: 12px 20px;
    padding-left: 20px;
  max-width: 100%;
  font-size: 17px;
  color: #333;
  margin-bottom: -5px !important;
  margin-top: 5px;
  padding-left: 0px;

}
.activate:hover{
  cursor:pointer;
}
.filtersSearch{
  background-repeat: no-repeat;
  background-position: right;
  border-bottom: 2px solid #0078D7;
  margin-right:20px;
  padding:10px 20px;
  max-width:100%;
  padding-left:0px;
}
.filtersSearch input{
  font-size:17px;

}
.filtersSearch input::placeholder{
  color:#333;
  font-size:17px;
}

.filtersDropdown{
  border-bottom: 2px solid #0078D7;
  margin-right:20px;
  margin-left:60px;
  font-size:16px;
  font-family:Segoe UI, Arial, sans-serif;
  position:relative;
}
.filtersSearch input{
  height:100%;
  width:230px;
}
.filtersDropdown .filters{
  position:absolute;
  display:flex;
  flex-direction:row;
  background:#FFF;
  top:50px;
  width:100%;
  padding:20px;
  -webkit-box-shadow: 1px 5px 10px 1px rgba(0,0,0,0.4); 
box-shadow: 1px 5px 10px 1px rgba(0,0,0,0.4);
display:none;
left:0px;
  max-width:500px;
padding-bottom:40px;
}

.filtersOptions{
  display:flex;
}
.filtersOptions .FirstRow{
  margin-right:10px;
}
.show .filters{
  display:flex!important;
  animation: fadeIn .5s;
-webkit-animation: fadeIn .5s;
-moz-animation: fadeIn .5s;
-o-animation: fadeIn .5s;
-ms-animation: fadeIn .5s;
flex-direction:column;
}
@keyframes fadeIn {
0% {opacity:0;}
100% {opacity:1;}
}
@-moz-keyframes fadeIn {
0% {opacity:0;}
100% {opacity:1;}
}
@-webkit-keyframes fadeIn {
0% {opacity:0;}
100% {opacity:1;}
}
@-o-keyframes fadeIn {
0% {opacity:0;}
100% {opacity:1;}
}
@-ms-keyframes fadeIn {
0% {opacity:0;}
100% {opacity:1;}
}
.uncheck{
  margin-bottom:14px;
  background:none;
  border:0px;
  max-width:100px;
  font-size:17px;
}
.uncheck:hover{
cursor:pointer;
}
.filters > div{
margin-right:20px;
}
.filters ul li{
  list-style:none;
  text-indent:none;
  margin-top:10px;
}
#filters .filtersSearch{
  width:400px;
  max-width:100%;
}
.filterOptions{
  display:flex;
  flex-direction:row;
}
.featuredItems{
 
  max-width:100%;
  margin:auto;
  background:#F5F5F5;
 
 
}
.featuredItems h4{
  font-family: Segoe UI,Arial,sans-serif;
  font-size: 22px;
  font-weight: 400;
  padding-left: 20px;
  margin-bottom: 0;
  margin-top: 20px;
  margin-left: 60px;
  display: block;
  padding-top: 30px;
  margin-bottom: -15px;
}
.filtersContainer .sortResults{
  border:0px;
  font-size:17px;
  font-family:Segoe UI, Arial, sans-serif;
  display:flex;
  margin-left:auto;
  margin-right:70px;
}
.sortBtn{
  background:none;
  border:none;
  padding-right:10px;
  font-size:17px;
  font-family:Segoe UI, Arial, sans-serif;
  margin-right:20px;
}
.items{
  display:flex;
  width: 1080px;
  
  flex-direction:row;
  flex-wrap:wrap;
  max-width:100%;
  padding:20px;
  padding-left:60px;

}
.viewBtn i{
  font-size:12px;
}
.viewBtn{
  display:flex;
  height:50px;
  position:relative;
}
.viewBtn a{
  position:absolute;
  right:0;
  bottom:0;
}
.item{
 width: 320px;
}
.item{
 display:flex;
 flex-direction:column;
max-width:320px;
padding:20px;
}
.viewStory{
  text-decoration:none;
  font-family:Segoe UI, Arial, sans-serif;
  font-size:17px;
  font-weight:bold;
  margin-top:20px;
  color:#0078D7;
}
.item img{
  margin-bottom:16px;
}
.viewStory i{

  font-weight:bold;
 
}
.item a{
  font-weight:600;
  font-family:Segoe UI, Arial, sans-serif;
  font-size:18px;
  text-decoration:none;
  color:#0078D7;
  margin-bottom:12px;
}
.item strong{
  font-weight:600;
}
.itemTitle{
  font-weight:600;
  font-family:Segoe UI, Arial, sans-serif;
  font-size:18px;
  color:#0078D7;
  margin-bottom:12px;
  text-decoration:none;
}
.item{
  color:#707070!important;
}
.itemDate{
  background:none;
  font-size:16px!important;
  color:#000!important;
}
.itemSolution{
  background:none;
}
.itemPartner{
  background:none;
}
.itemIndustry{
  background:none;
}
.itemType{
  background:none;
}
.item p{
  font-family:Segoe UI, Arial, sans-serif;
  font-size:15px;
  line-height:22px;
  margin:0px;
}
i[data-icon-name="Search"]{
  font-size: 14px;
  margin-left: 8px;
}
i[data-icon-name="ChevronDown"]{
  font-size: 14px;
  margin-left: 8px;
}
.item .itemDate strong{
  color:#000!important;
  font-size:16px!important;
}
.itemList{
  padding:20px;
}
@media all and (max-width:800px){
  .item{
   width:80%;
 
  }
  .items{
    padding:0px;
  }
  .filterContainer{
    flex-direction:column;
    padding:0px;
  }
  .show .filters{
    flex-direction:column;
    box-shadow:none!important;
    position:relative!important;
    top:none!important;
    background:#FFF;
  }
  .filtersDropdown{
    width:100%;
    margin:0px;
    margin-bottom:20px;
  }
  .filtersSearch{
    width:100%;
    margin:0px;
    margin-bottom:20px;
  }
  .sortResults{
    width:100%;
    margin:0px!important;
    margin-bottom:20px;
  }
  #filters .filtersContainer{
    flex-direction:column;
    padding:0px;
  }
  .featuredItems h4{
    margin:0px;
    margin-left:15px;
    margin-bottom:20px;
  }
}
@media all and (max-width:700px){
  #filters div{
      width:80%!important;
      margin-top:20px;
  }
  #filters{
      max-width:90%;
  }
 
  .items{
      flex-direction:column;
      justify-content:space-between;
      align-items:center;
  }
}

